# teams-agent-accelerator-templates

./: .gitignore  README.md  frontmatter.json
.frontmatter/database/: mediaDb.json
.github/ISSUE_TEMPLATE/: new-template-request.md
.github/workflows/: nextjs.yml
data-analyst-agent/data/: sqleval.jsonl
docs/: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/app/: clarity.tsx  layout.styles.ts  layout.tsx  page.tsx
docs/scripts/: templates.mjs
dotnet/dex-agent/: AdapterWithErrorHandler.cs  AppState.cs  Config.cs  ConversationInfo.cs  DexAgent.csproj  DexAgent.sln  (+11 more)
python/computer-use-agent/: .gitignore  Dockerfile  README.md  pyproject.toml  sample.env  teamsapp.local.yml  teamsapp.testtool.yml
python/computer-use-agent/appPackage/: manifest.json
python/computer-use-agent/src/: cards.py  config.py
python/computer-use-agent/src/cua/: client.py  cua_agent.py  cua_target.py  utils.py
python/computer-use-agent/src/cua/vnc/: machine.py  vnc.py
python/computer-use-agent/src/storage/: cua_session.py  session_storage.py
python/memory-sample-agent/: .webappignore  README.md  app.py  bot.py  config.py  pyproject.toml  requirements.txt  sample.env  teamsapp.local.yml  teamsapp.yml  utils.py
python/memory-sample-agent/infra/: azure.bicep  azure.parameters.json
python/memory-sample-agent/public/memoriesTab/: index.html  teamsapp.js
python/memory-sample-agent/tech_assistant_agent/: agent.py  primary_agent.py  prompts.py  supported_tech_tasks.py  tech_agent.py  tools.py
(+141 files in other folders)
